2013-08-21  Araki Ken  <arakiken@users.sf.net>

	* version.h.in: 3.2.2post -> 3.2.3pre

	* ml_vt100_parser.c:
	  - OSC ? 80 h (disable sixel scrolling) is (ad-hoc) supported.
	  - A sixel next line character (-) is sent after a sixel dump.

2013-08-20  Araki Ken  <arakiken@users.sf.net>

	* win32/x_window.c: The background raster operation of MaskBlt is changed
	  from PATCOPY to 0xaa0029 which draws nothing to the destination device
	  context.

	* x_screen.c: x_window_set_bg_color() is called in x_screen_reset_view()
	  because RGB of the window bg color can be changed.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c: 1024x768x1 is supported on NetBSD/x68k.

2013-08-16  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c, ml_color.c, c_imagelib.c:
	  Threshold to determine the closest pixel is changed from 31 to 640.

	* fb/x_display.c, fb/x.h: prev_pixel and prev_closest_pixel which cache
	  the closest pixel previously found in the color palette are added to
	  Display.

2013-08-15  Araki Ken  <arakiken@users.sf.net>

	* x_screen_manager.c: x_display_reset_cmap() is called in
	  color_config_updated().

	* fb/x_display.[ch]:
	  - x_cmap_reset() is renamed to x_display_reset_cmap().
	  - cleanup.

2013-08-15  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: orig_reg is copied from 768x512x4 crtc and videoc
	  (except videoc.r2 = 0x20) instead of being copied from reg in order
	  not to slide the screen on exit.

2013-08-14  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Cleanup code for NetBSD/x68k.

2013-08-13  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: open_display() on NetBSD is separated to
	  open_display() for wscons and open_display() for x68k.

2013-08-12  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c: "fb_resolution" option is available on NetBSD/x68k
	  framebuffer.

	* fb/x_display.c, fb/x_imagelib.c:
	  /dev/grf1 support for NetBSD/x68k is added.

	* mkf/configure.in, mkf/libtbl/Makefile: